# libredwg-cpp

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  README.md  pyproject.toml  pytest-runner
bindings/: CMakeLists.txt  pylib.cpp
examples/: convertation.py  logging_example.py
lib/: CMakeLists.txt  document.cpp
lib/include/libredwg_cpp/: document.hpp  error.hpp  save_options.hpp  version.hpp
python/: __init__.py  libredwg_cpp.pyi
src/: CMakeLists.txt
src/bindings/: CMakeLists.txt  py_ilogger_wrapper.cpp  py_ilogger_wrapper.hpp  pyilogger.cpp  pyilogger.hpp  pylib.cpp
src/lib/: CMakeLists.txt  document.cpp  logging_dispatcher.cpp
src/lib/dwg_logging_override/: CMakeLists.txt  custom_logging.h  dwg_logging.c
src/lib/include/libredwg_cpp/: document.hpp  error.hpp  logging_dispatcher.hpp  version.hpp
tests/: test_empty.py  test_libredwg.py  test_shapes.py
tests/data/: empty.dwg
