[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "pylibredwgcpp"
dynamic = ["version"]

[tool.scikit-build]
build-dir = "build"
cmake.define = {"BUILD_PYPROJECT"="ON"}

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "VERSION"
regex = '^(?P<version>\d+\.\d+\.\d+(?:[a-zA-Z0-9\-\.]+)?)$'
result = "{version}"

[project.optional-dependencies]
dev = [
    "pybind11-stubgen",
]
tests = [
    "pytest",
]
